# ev_sdk_demo4.0_pedestrian_intrusion_yolov5

./: CMakeLists.txt  build.sh  build_test.sh
config/: algo_config_yolov6.json
src/: Configuration.hpp  SampleAlgorithm.cpp  SampleDetector.cpp  SampleDetector.h
test/: CMakeLists.txt  test.cpp
